[gd_scene load_steps=11 format=1]

[ext_resource path="res://actors/planet/planet_new_behavior.gd" type="Script" id=1]
[ext_resource path="res://screens/GUI/under.png" type="Texture" id=2]
[ext_resource path="res://screens/GUI/fill.png" type="Texture" id=3]
[ext_resource path="res://actors/planet/samples.tres" type="SampleLibrary" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 47.7516

[sub_resource type="Animation" id=2]

resource/name = "rank_five"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 1.9, 1.9 ), Vector2( 1.7, 1.7 ), Vector2( 2.1, 2.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/shape:shape:radius")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 80.0, 92.5082 ]
}

[sub_resource type="Animation" id=3]

resource/name = "rank_four"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 1.7, 1.7 ), Vector2( 1.5, 1.5 ), Vector2( 1.9, 1.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/shape:shape:radius")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 0.25 ),
"update": 0,
"values": [ 72.4848, 80.0 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.743931, 0.743931 ), Vector2( 1.3, 1.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/shape:shape:radius")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 42.0075, 54.5617 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.3, 1.3 ), Vector2( 1.7, 1.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/shape:shape:radius")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 64.5283, 72.4848 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprites:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 0.25, 4 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/shape:shape:radius")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 54.5617, 64.5283 ]
}

[node name="planet" type="Node2D" groups=[
"planet",
]]

script/script = ExtResource( 1 )
needed_tics = 10
min_wait_time = 3.0
max_wait_time = 6.0
energy_consumption = 7
score_potential = 10

[node name="tapometer" type="TextureProgress" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -38.0
margin/top = 83.0
margin/right = 671.0
margin/bottom = 189.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 2 )
texture/over = null
texture/progress = ExtResource( 3 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="sprites" type="Node2D" parent="."]

z/z = 1

[node name="area" type="Area2D" parent="."]

z/z = -1
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape2D" parent="area"]

z/z = -2
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rank_five = SubResource( 2 )
anims/rank_four = SubResource( 3 )
anims/rank_one = SubResource( 4 )
anims/rank_three = SubResource( 5 )
anims/rank_two = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="soundeffects" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 4 )
config/pitch_random = 0.0

[connection signal="input_event" from="area" to="." method="_on_area_input_event"]

[connection signal="mouse_enter" from="area" to="." method="_on_area_mouse_enter"]

[connection signal="mouse_exit" from="area" to="." method="_on_area_mouse_exit"]

[connection signal="tween_complete" from="tween" to="." method="_on_tween_tween_complete"]


